--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <body>
           <h1>welcome to all</h1>
           <!-- h1 is 32px  -->
-          <h2>welcome to all</h2>
+          <h2>welcome</h2>
           <h3>welcome to all</h3>
           <h4>welcome to all</h4>
           <h5>welcome to all</h5>
